# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import authRouter from "./auth";
 import eventsRouter from "./events";
 import fansRouter from "./fans";
+import venuesRouter from "./venues";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(authRouter);
 router.use(eventsRouter);
 router.use(fansRouter);
+router.use(venuesRouter);
 
 export default router;
